kubernetes/selenium-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub-deployment
  labels:
    app: selenium-hub
    name: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: selenium-hub
          image: registry-quay-clientprod.apps.ocpmgmt1.acic-navan.com/svc_quayprod/selenium/hub:latest
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 4443
              protocol: TCP
            - containerPort: 4442
              protocol: TCP
              
          resources:
            requests:
              memory: "1024Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      serviceAccountName: toolstack-sa
      serviceAccount: toolstack-sa
         
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  labels:
    name: selenium-hub
spec:
  type: ClusterIP
  selector:
    app: selenium-hub
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: bus-subscribe
      protocol: TCP
      port: 4443
      targetPort: 4443
    - name: bus-publish
      protocol: TCP
      port: 4442
      targetPort: 4442
    - name: node
      protocol: TCP
      port: 5555
      targetPort: 5555
      
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    description: Route for selenium's https service.
  name: selenium-hub
  labels:
    app: selenium-hub
spec:
  to:
    kind: Service
    name: selenium-hub
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
